--- a/index.html
+++ b/index.html
@@ -51,6 +51,170 @@
                     </div>
                 </div>
             </section>
+            <section class="about section">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title padd-15">
+                            <h2>About Me</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="about-content padd-15">
+                            <div class="row">
+                                <div class="about-text padd-15">
+                                    <h3>I am Jessie, <span>the full stack developer</span></h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                        Aenean scelerisque orci justo. Nunc gravida, odio id aliquet 
+                                        convallis, sem tellus venenatis dolor, vitae varius lacus massa 
+                                        sit amet tellus. Praesent tristique lacus vitae magna hendrerit, 
+                                        eu pulvinar ex rutrum. Phasellus euismod nisl sed enim blandit, 
+                                        id sollicitudin mi sagittis. Integer volutpat eget elit eu convallis. 
+                                        Fusce sed ultrices turpis, in elementum nulla. Aenean magna sem, 
+                                        ornare ut laoreet sit amet, blandit et sem. Praesent sodales congue 
+                                        augue quis auctor. Integer dictum semper erat, vel porttitor neque porta nec.</p>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="personal-info padd-15">
+                                    <div class="row">
+                                        <div class="info-item padd-15">
+                                            <p>Email: <span>umuhireumutesi@gmail.com</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>Phone: <span>+250 7800 0000</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>Degree: <span>Computer Science</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>Website: <span>www.jessie.com</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>City: <span>Kigali</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>Country: <span>Rwanda</span></p>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="buttons padd-15">
+                                            <a href="#" class="btn">Download CV</a>
+                                            <a href="contact" class="btn hire-me">Hire</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="skills padd-15">
+                                    <div class="row">
+                                        <div class="skill-item padd-15">
+                                            <h5>Python</h5>
+                                            <div class="progress">
+                                                <div class="progress-in" style="width: 85%;"></div>
+                                                <div class="skill-percent">85%</div>
+                                            </div>
+                                        </div>
+                                        <div class="skill-item padd-15">
+                                            <h5>Java</h5>
+                                            <div class="progress">
+                                                <div class="progress-in" style="width: 85%;"></div>
+                                                <div class="skill-percent">85%</div>
+                                            </div>
+                                        </div>
+                                        <div class="skill-item padd-15">
+                                            <h5>JavaScript</h5>
+                                            <div class="progress">
+                                                <div class="progress-in" style="width: 80%;"></div>
+                                                <div class="skill-percent">80%</div>
+                                            </div>
+                                        </div>
+                                        <div class="skill-item padd-15">
+                                            <h5>CSS</h5>
+                                            <div class="progress">
+                                                <div class="progress-in" style="width: 85%;"></div>
+                                                <div class="skill-percent">80%</div>
+                                            </div>
+                                        </div>
+                                        <div class="skill-item padd-15">
+                                            <h5>HTML</h5>
+                                            <div class="progress">
+                                                <div class="progress-in" style="width: 90%;"></div>
+                                                <div class="skill-percent">90%</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="education padd-15">
+                                    <h3 class="title">Education</h3>
+                                    <div class="row">
+                                        <div class="timeline-box padd-15">
+                                            <div class="timeline shadow-dark">
+                                                <!-- timeline items-->
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"> May 2021 - Aug 2021</i>
+                                                    </h3>
+                                                    <h4 class="timeline-title">Bachelors in Computer Science</h4>
+                                                    <p class="timeline-text">Lorem, ipsum dolor sit amet consectetur 
+                                                        adipisicing elit. Id accusantium beatae quibusdam ad nostrum, 
+                                                        non magni doloremque eligendi? Iure minus accusamus deserunt 
+                                                        aliquam unde laboriosam.</p>
+                                                </div>
+                                                <!-- timeline items-->
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"> May 2021 - Aug 2021</i>
+                                                    </h3>
+                                                    <h4 class="timeline-title">Bachelors in Computer Science</h4>
+                                                    <p class="timeline-text">Lorem, ipsum dolor sit amet consectetur 
+                                                        adipisicing elit. Id accusantium beatae quibusdam ad nostrum, 
+                                                        non magni doloremque eligendi? Iure minus accusamus deserunt 
+                                                        aliquam unde laboriosam.</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="experience padd-15">
+                                    <h3 class="title">Experience</h3>
+                                    <div class="row">
+                                        <div class="timeline-box padd-15">
+                                            <div class="timeline shadow-dark">
+                                                <!-- timeline items-->
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"> May 2021 - Aug 2021</i>
+                                                    </h3>
+                                                    <h4 class="timeline-title">Bachelors in Computer Science</h4>
+                                                    <p class="timeline-text">Lorem, ipsum dolor sit amet consectetur 
+                                                        adipisicing elit. Id accusantium beatae quibusdam ad nostrum, 
+                                                        non magni doloremque eligendi? Iure minus accusamus deserunt 
+                                                        aliquam unde laboriosam.</p>
+                                                </div>
+                                                <!-- timeline items-->
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"> May 2021 - Aug 2021</i>
+                                                    </h3>
+                                                    <h4 class="timeline-title">Bachelors in Computer Science</h4>
+                                                    <p class="timeline-text">Lorem, ipsum dolor sit amet consectetur 
+                                                        adipisicing elit. Id accusantium beatae quibusdam ad nostrum, 
+                                                        non magni doloremque eligendi? Iure minus accusamus deserunt 
+                                                        aliquam unde laboriosam.</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
  
         </div>
         <!-- =====Main Content Start -->
