--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Jessie's Brand</title>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/style2.css">
         <link rel="stylesheet" href="css/skins/color-1.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -51,6 +51,7 @@
                     </div>
                 </div>
             </section>
+ 
             <section class="about section">
                 <div class="container">
                     <div class="row">
@@ -210,6 +211,58 @@
                                         </div>
                                     </div>
                                 </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+ 
+            <section class="portfolio section">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title padd-15">
+                            <h2>Portfolio</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="portfolio-item padd-15">
+                            <div class="portfolio-img">
+                                <img src="images\pictures\website-builder.jpg" alt="">
+                            </div>
+                            <div class="img-discription">
+                                <h3 class="img-title">Web Designing</h3>
+                                <p class="img-text">Lorem ipsum dolor sit amet consectetur 
+                                    adipisicing elit. Porro.</p>
+                            </div>
+                        </div> 
+                        <div class="portfolio-item padd-15">
+                            <div class="portfolio-img">
+                                <img src="images\pictures\website-builder.jpg" alt="">
+                            </div>
+                            <div class="img-discription">
+                                <h3 class="img-title">Web Designing</h3>
+                                <p class="img-text">Lorem ipsum dolor sit amet consectetur 
+                                    adipisicing elit. Porro.</p>
+                            </div>
+                        </div> 
+                        <div class="portfolio-item padd-15">
+                            <div class="portfolio-img">
+                                <img src="images\pictures\website-builder.jpg" alt="">
+                            </div>
+                            <div class="img-discription">
+                                <h3 class="img-title">Web Designing</h3>
+                                <p class="img-text">Lorem ipsum dolor sit amet consectetur 
+                                    adipisicing elit. Porro.</p>
+                            </div>
+                        </div>
+                        <div class="portfolio-item padd-15">
+                            <div class="portfolio-img">
+                                <img src="images\pictures\website-builder.jpg" alt="">
+                            </div>
+                            <div class="img-discription">
+                                <h3 class="img-title">Web Designing</h3>
+                                <p class="img-text">Lorem ipsum dolor sit amet consectetur 
+                                    adipisicing elit. Porro.</p>
                             </div>
                         </div>
                     </div>
