--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Jessie's Brand</title>
-        <link rel="stylesheet" href="css/style2.css">
+        <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/skins/color-1.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -267,6 +267,51 @@
                         </div>
                     </div>
                 </div>
+            </section>
+ 
+            <section class="blog section">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title padd-15">
+                            <h2>My Blogs</h2>
+                        </div>
+                    </div>
+                    <div class="blog-info">
+                        <p class="blog-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                            Quaerat, qui facere. Culpa sequi incidunt beatae!</p>
+                    </div>
+                    <div class="parent-item">
+                        <div class="blog-item">
+                            <div class="blog-photo">
+                                <img src="images\pictures\blog-database.jpg" alt="">
+                            </div>
+                            <div class="blog-details">
+                                <h2 class="title">Article 1</h2>
+                                <p class="blog-descrption">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                    Vero... <span>Read more</span></p>
+                            </div>
+                        </div>
+                        <div class="blog-item">
+                            <div class="blog-photo">
+                                <img src="images\pictures\blog-database.jpg" alt="">
+                            </div>
+                            <div class="blog-details">
+                                <h2 class="title">Article 1</h2>
+                                <p class="blog-descrption">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                    Vero... <span>Read more</span></p>
+                            </div>
+                        </div>
+                        <div class="blog-item">
+                            <div class="blog-photo">
+                                <img src="images\pictures\blog-database.jpg" alt="">
+                            </div>
+                            <div class="blog-details">
+                                <h2 class="title">Article 1</h2>
+                                <p class="blog-descrption">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                    Vero... <span>Read more</span></p>
+                            </div>
+                        </div>
+                    </div>
             </section>
  
         </div>
