contact page of website

--- a/index.html
+++ b/index.html
@@ -314,6 +314,84 @@
                     </div>
             </section>
  
+            <section class="contact section">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title padd-15">
+                            <h2>Contact Me</h2>
+                        </div>
+                    </div>
+                    <h3 class="contact-title padd-15">Do you have any questions</h3>
+                    <h4 class="contact-sub-title padd-15">I am here for you</h4>
+                    <div class="row">
+                        <div class="contact-info-item padd-15">
+                            <div class="icon"><i class="fa fa-phone"></i></div>
+                            <h4>Call Me On</h4>
+                            <p>+250 7870 0000</p>
+                        </div>
+ 
+                        <div class="contact-info-item padd-15">
+                            <div class="icon"><i class="fa fa-envelope"></i></div>
+                            <h4>Email</h4>
+                            <p>jessie@gmail.com</p>
+                        </div>
+ 
+                        <div class="contact-info-item padd-15">
+                            <div class="icon"><i class="fa fa-linkedin"></i></div>
+                            <h4>LinkedIn</h4>
+                            <p>www.jessie.com</p>
+                        </div>
+ 
+                        <div class="contact-info-item padd-15">
+                            <div class="icon"><i class="fa fa-github"></i></div>
+                            <h4>Visit My Github</h4>
+                            <p>www.jessie.com</p>
+                        </div>
+                    </div>
+                    <h3 class="contact-title padd-15">SEND ME AN EMAIL</h3>
+                        <!-- <h4 class="contact-sub-title"></h4> -->
+ 
+                    <div class="row">
+                        <div class="contact-form padd-15">
+                            <div class="row">
+                                <div class="form-item col-6 padd-15">
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" placeholder="Name">
+                                    </div>
+                                </div>
+                                <div class="form-item col-6 padd-15">
+                                    <div class="form-group">
+                                        <input type="email" class="form-control" placeholder="Email">
+                                    </div>
+                                </div>
+                            </div>
+ 
+                            <div class="row">
+                                <div class="form-item col-12 padd-15">
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" placeholder="Subject">
+                                    </div>
+                                </div>
+                            </div>
+ 
+                            <div class="row">
+                                <div class="form-item col-12 padd-15">
+                                    <div class="form-group">
+                                        <textarea name="" class="form-control" id="" placeholder="Message"></textarea>
+                                    </div>
+                                </div>
+                            </div>
+ 
+                            <div class="row">
+                                <div class="form-item col-12 padd-15">
+                                    <button type="submit" class="btn">Send Message</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>    
+                </div>
+            </section>
+ 
         </div>
         <!-- =====Main Content Start -->
     </div>
