--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Jessie's Brand</title>
+        <title>Home</title>
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/skins/color-1.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
- 
+
     </head>
 <body>
     <!-- ======= Main container Start =========-->
@@ -23,12 +23,12 @@
                 <span></span>
             </div>
             <ul class="nav">
-                <li><a href="#" class="active">Home</a></li>
-                <li><a href="#" >About</a></li>
-                <li><a href="#" >Portfolio</a></li>
-                <li><a href="#" >Blog</a></li>
-                <li><a href="#" >Contact</a></li>
-                <li><a href="#" class="active-login">Login</a></li>
+                <li><a href="./index.html" class="active">Home</a></li>
+                <li><a href="./html/about.html" >About</a></li>
+                <li><a href="./html/portfolio.html" >Portfolio</a></li>
+                <li><a href="./html/blog.html" >Blog</a></li>
+                <li><a href="./html/contact.html" >Contact</a></li>
+                <li><a href="./html/login.html" class="tap-login">Login</a></li>
             </ul>
         </div>
         <!-- ========Hero End -->
@@ -100,7 +100,7 @@
                                     <div class="row">
                                         <div class="buttons padd-15">
                                             <a href="#" class="btn">Download CV</a>
-                                            <a href="contact" class="btn hire-me">Hire</a>
+                                            <a href="#contact" class="btn hire-me">Hire</a>
                                         </div>
                                     </div>
                                 </div>
@@ -397,6 +397,14 @@
     </div>
     <!-- ======= Main container End =========-->
    
+    <!-- ======= Dark-Light mode feature Start =========-->
+    <!-- <div class="style-switcher">
+        <div class="day-night s-icon">
+            <i class="fas fa-light-switch"></i>
+        </div>
+
+    </div> -->
+    <!-- ======= Dark-Light mode feature Start =========-->
     <script src="js.script.js"></script>
 </body>
 </html>
