--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Home</title>
         <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/skins/color-1.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -23,12 +22,13 @@
                 <span></span>
             </div>
             <ul class="nav">
-                <li><a href="./index.html" class="active">Home</a></li>
-                <li><a href="./html/about.html" >About</a></li>
-                <li><a href="./html/portfolio.html" >Portfolio</a></li>
-                <li><a href="./html/blog.html" >Blog</a></li>
-                <li><a href="./html/contact.html" >Contact</a></li>
-                <li><a href="./html/login.html" class="tap-login">Login</a></li>
+                <li><a href="./index.html" class="nav-item" class="active">Home</a></li>
+                <li><a href="./html/about.html" class="nav-item">About</a></li>
+                <li><a href="./html/portfolio.html" class="nav-item">Portfolio</a></li>
+                <li><a href="./html/blog.html" class="nav-item">Blog</a></li>
+                <li><a href="./html/contact.html" class="nav-item">Contact</a></li>
+                <li id="login-btn"><a href="./html/login.html" class="tap-login" class="nav-item">Login</a></li>
+                <li id="logout-btn"><a href="#" class="tap-login" onclick="logout()">Logout</a></li>
             </ul>
         </div>
         <!-- ========Hero End -->
@@ -52,7 +52,7 @@
                 </div>
             </section>
  
-            <section class="about section">
+            <section class="about section hidden">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -217,7 +217,7 @@
                 </div>
             </section>
  
-            <section class="portfolio section">
+            <section class="portfolio section hidden">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -269,7 +269,7 @@
                 </div>
             </section>
  
-            <section class="blog section">
+            <section class="blog section hidden">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -314,7 +314,7 @@
                     </div>
             </section>
  
-            <section class="contact section">
+            <section class="contact section hidden">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -405,6 +405,9 @@
 
     </div> -->
     <!-- ======= Dark-Light mode feature Start =========-->
-    <script src="js.script.js"></script>
+    
+    <script src="./js/script.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    
 </body>
 </html>
