getting comments on a single blog

--- a/Dashboard/html/contact-message.html
+++ b/Dashboard/html/contact-message.html
@@ -56,9 +56,9 @@
           <table>
             <tr class="table-head">
               <th scope="col">No</th>
-              <th scope="col">Blog Image</th>
-              <th scope="col">Tittle</th>
-              <th scope="col">Blog Description</th>
+              <th scope="col">First Name</th>
+              <th scope="col">Second Name</th>
+              <th scope="col">Email</th>
               <th scope="col">Date</th>
               <th scope="col">Action</th>
             </tr>
@@ -70,8 +70,7 @@
               <td>Hello here we are doing this</td>
               <td></td>
               <td>
-                <span class="view">View</span>
-                <span class="update">Update</span>
+                <span class="view">Reply</span>
                 <span class="delete">Delete</span>
               </td>
             </tr>
@@ -83,8 +82,7 @@
               <td>Hello here we are doing this</td>
               <td></td>
               <td>
-                <span class="view">View</span>
-                <span class="update">Update</span>
+                <span class="view">Reply</span>
                 <span class="delete">Delete</span>
               </td>
             </tr>
