--- a/html/contact.html
+++ b/html/contact.html
@@ -124,6 +124,29 @@
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
     <script>
+        function logout() {
+            swal({
+                title: 'Are you sure?',
+                icon: 'warning',
+                buttons: ["cancel", "logout"],
+            }).then((result) => {
+                if (result) {
+                    swal(
+                        'Deleted!',
+                        'Your file has been deleted.',
+                        'success'
+                    )
+    
+                    localStorage.removeItem("token");
+    
+                    location.href = "../../html/login.html";
+                }
+            }
+            )
+        }
+    </script>
+
+    <script>
 
         const form = document.querySelector('.contactform')
 
