--- a/Dashboard/html/edit-blog.html
+++ b/Dashboard/html/edit-blog.html
@@ -48,7 +48,7 @@
             <li><a href="/index.html">Home</a></li>
             <li><a href="../../html/blog.html" class="active">Blog</a></li>
             <li><a href="../../html/contact.html">Contact</a></li>
-            <li><a href="#" class="active-login">Logout</a></li>
+            <li><a class="active-login" onclick="logout()">Logout</a></li>
 
           </ul>
         </div>
